# RastreadorWeb

./: .gitignore  Cargo.toml  LICENSE  README.md  output  output.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/scraper/: fetcher.rs  mod.rs  navigator.rs  parser.rs
src/scraper/navigator/: common.rs  images.rs  links.rs  mod.rs
src/storage/: csv.rs  json.rs  mod.rs  persistence.rs
tests/: integration.rs  navigator_tests.rs  parser_tests.rs
